# crowd_navigation_tiago

./: .gitignore  README.md
crowd_navigation/: CMakeLists.txt  package.xml
crowd_navigation_core/: CMakeLists.txt  package.xml  setup.py
crowd_navigation_core/launch/: agents_detection.launch  camera_detection.launch  camera_perception.launch  crowd_navigation.launch  crowd_prediction.launch  laser_detection.launch  laser_perception.launch  motion_generation.launch  plotter.launch  send_actors_trajectory.launch  send_agents_trajectory.launch  send_desired_head_config.launch  send_desired_target_position.launch  send_fake_data.launch  start.launch  start_fake.launch
crowd_navigation_core/my_tiago_controller/: CMakeLists.txt  package.xml
crowd_navigation_core/my_tiago_controller/launch/: crowd_navigation.launch  crowd_prediction.launch  send_actors_trajectory.launch  send_desired_target_position.launch
crowd_navigation_core/my_tiago_controller/scripts/: nmpc_controller  send_actors_trajectory
crowd_navigation_core/my_tiago_controller/src/my_tiago_controller/: ControllerManager.py  CrowdPredictionManager.py  FSM.py  Kalman.py  KinematicModel.py  Plotter.py  SendActorsTrajectory.py
crowd_navigation_core/my_tiago_controller/worlds/: labrob_10_humans.world
crowd_navigation_core/my_tiago_msgs/: CMakeLists.txt
crowd_navigation_core/scripts/: agents_detection  camera_detection  camera_perception  crowd_prediction  laser_detection  laser_perception  motion_generation  plotter  send_actors_trajectory  send_agents_trajectory  send_desired_head_config  send_desired_target_position
crowd_navigation_core/src/crowd_navigation_core/: AgentsDetectionManager.py  CameraDetectionManager.py  CameraPerceptionManager.py  CrowdPredictionManager.py  FSM.py  Hparams.py  Kalman.py  KinematicModel.py  LaserDetectionManager.py  LaserPerceptionManager.py  MotionGenerationManager.py  NMPC.py  Planner.py  Plotter.py  SendActorsTrajectory.py  SendAgentsTrajectory.py  SendDesiredHeadConfig.py  SendDesiredTargetPosition.py  utils.py
crowd_navigation_core/worlds/: labrob_5_humans_standing.world
crowd_navigation_msgs/: CMakeLists.txt  package.xml
crowd_navigation_msgs/msg/: Measurement.msg  Measurements.msg  MeasurementsSet.msg  MeasurementsSetStamped.msg  MeasurementsStamped.msg  MotionPrediction.msg
labrob_gazebo_worlds/worlds/: labrob_10_humans.world  labrob_1_human.world  labrob_2_humans.world  labrob_3_humans.world  labrob_5_humans.world  labrob_5_humans_standing.world  labrob_7_humans.world  labrob_corridor_5_humans.world  labrob_dynamic.world  labrob_dynamic2.world  labrob_obs.world  labrob_office_double_5_humans.world  labrob_simple_office_5_humans.world  labrob_static.world
labrob_tiago_gazebo/launch/: tiago_gazebo.launch
my_tiago_controller/: CMakeLists.txt  package.xml  setup.py
my_tiago_controller/launch/: kin_dyn_comparison.launch  kinematic_simulation.launch  logger.launch  my_tiago_controller.launch  plotter.launch  send_humans_trajectory.launch  start.launch  tiago_gazebo.launch
my_tiago_controller/scripts/: crowd_prediction  kinematic_simulation  logger  nmpc_controller  plotter  send_desired_target_position  send_humans_trajectory
my_tiago_controller/scripts/c_generated_code/: Makefile  acados_sim_solver_tiago_kinematic_model.h  acados_solver.pxd  acados_solver_tiago_kinematic_model.c
my_tiago_controller/scripts/c_generated_code/tiago_kinematic_model_constraints/: tiago_kinematic_model_constraints.h
my_tiago_controller/scripts/c_generated_code/tiago_kinematic_model_model/: tiago_kinematic_model_expl_ode_fun.c  tiago_kinematic_model_expl_vde_adj.c  tiago_kinematic_model_expl_vde_forw.c  tiago_kinematic_model_model.h
my_tiago_controller/src/my_tiago_controller/: ControllerManager.py  CrowdPredictionManager.py  FSM.py  FSMStates.py  Hparams.py  Kalman.py  KinematicModel.py  KinematicSimulation.py  Logger.py  NMPC.py  Plotter.py  SendActorsTrajectory.py  SendDesiredTargetPosition.py  SendHumansTrajectory.py  Status.py  controllerManager.py  hparams.py  kinematicModel.py  kinematicSimulation.py  nmpc.py  params.py  utils.py
my_tiago_controller/src/my_tiago_controller/c_generated_code/: Makefile  acados_sim_solver_tiago_kinematic_model.c  acados_solver_tiago_kinematic_model.h  main_sim_tiago_kinematic_model.c  main_tiago_kinematic_model.c
my_tiago_controller/src/my_tiago_controller/c_generated_code/tiago_kinematic_model_cost/: tiago_kinematic_model_cost.h
my_tiago_controller/src/my_tiago_controller/c_generated_code/tiago_kinematic_model_model/: tiago_kinematic_model_expl_ode_fun.c  tiago_kinematic_model_expl_vde_adj.c  tiago_kinematic_model_expl_vde_forw.c
my_tiago_controller/worlds/: 5_humans.world  empty.world  labrob_10_humans_vel05.world  labrob_5_humans.world  labrob_obs.world
my_tiago_msgs/: CMakeLists.txt  package.xml
my_tiago_msgs/msg/: MotionPrediction.msg
my_tiago_msgs/srv/: SetDesiredTargetPosition.srv  SetHumansTrajectory.srv
