<?xml version="1.0"?>
<package format="2">
  <name>crowd_navigation</name>
  <version>0.0.0</version>
  <description>The crowd_navigation package</description>
  <maintainer email="gravina.2021526@studenti.uniroma1.it">Giovanbattista Gravina</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>crowd_navigation_core</exec_depend>
  <exec_depend>crowd_navigation_msgs</exec_depend>
  <exec_depend>labrob_gazebo_worlds</exec_depend>
  <exec_depend>labrob_tiago_gazebo</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>